--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,12 @@
-extends layout
-
-block content
-  h1= title
-  p Welcome to #{title}
+// filepath: /c:/www/solparts/views/index.pug
+doctype html
+html
+  head
+    title= title
+  body
+    h1= title
+    if user
+      p Welcome, #{user.username}!
+      a(href="/auth/logout") Logout
+    else
+      a(href="/auth/login") Login
