--- a/modules/system/views/layout-view.pug
+++ b/modules/system/views/layout-view.pug
@@ -3,5 +3,6 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src='https://unpkg.com/htmx.org@1.6.1')
   body
     block content
